--- a/popup.html
+++ b/popup.html
@@ -91,6 +91,22 @@
         line-height: normal;
         text-decoration: none;
       }
+
+      .text {
+        color: #fff;
+        font-family: "Days One", sans-serif;
+        font-size: 8px;
+        font-weight: 400;
+        line-height: normal;
+      }
+      .text a {
+        color: #fff;
+        font-family: "Days One", sans-serif;
+        font-size: 8px;
+        font-weight: 400;
+        line-height: normal;
+        text-decoration: none;
+      }
     </style>
     <link
       rel="stylesheet"
@@ -108,6 +124,15 @@
       <div id="result">
         AccessToken nasıl alacagınızı bilmiyorsanız
         <a href="">buraya tıklayın</a>.
+      </div>
+
+      <!-- Card Footer ile kullanici sozlesmesi alani -->
+
+      <div class="card-footer">
+        <p class="text">
+          <a href="">Kullanıcı Sözleşmesi</a> •
+          <a href="">Gizlilik Sözleşmesi</a>
+        </p>
       </div>
     </div>
 
