--- a/popup.html
+++ b/popup.html
@@ -130,8 +130,17 @@
 
       <div class="card-footer">
         <p class="text">
-          <a href="">Kullanıcı Sözleşmesi</a> •
-          <a href="">Gizlilik Sözleşmesi</a>
+          <a
+            href="https://github.com/alicangunduz/knock-knock-follow-me/blob/main/doc/kullanici-sozlesmesi.md"
+            target="_blank"
+            >Kullanıcı Sözleşmesi</a
+          >
+          •
+          <a
+            href="https://github.com/alicangunduz/knock-knock-follow-me/blob/main/doc/gizlilik-sozlesmesi.md"
+            target="_blank"
+            >Gizlilik Sözleşmesi</a
+          >
         </p>
       </div>
     </div>
