--- a/popup.html
+++ b/popup.html
@@ -130,7 +130,8 @@
       <h2 id="github-title">Github Takip Kontrolü</h2>
       <form id="token-form">
         <label for="access-token">GitHub AccessToken Giriniz</label>
-        <input type="text" id="access-token" required />
+        <input type="password" id="access-token" required />
+
         <button id="save-button" type="button">Kaydet</button>
       </form>
       <div id="result">
